// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignmentFilter component render with selected assignment snapshot 1`] = `
<div
  className="grade-filter-inputs"
>
  <PercentGroup
    disabled={false}
    id="assignmentGradeMin"
    label="Min Grade"
    onChange={[MockFunction]}
    value={23}
  />
  <PercentGroup
    disabled={false}
    id="assignmentGradeMax"
    label="Max Grade"
    onChange={[MockFunction]}
    value={300}
  />
  <div
    className="grade-filter-action"
  >
    <Button
      disabled={false}
      name="assignmentGradeMinMax"
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </Button>
  </div>
</div>
`;

exports[`AssignmentFilter component render without selected assignment snapshot 1`] = `
<div
  className="grade-filter-inputs"
>
  <PercentGroup
    disabled={true}
    id="assignmentGradeMin"
    label="Min Grade"
    onChange={[MockFunction]}
    value={23}
  />
  <PercentGroup
    disabled={true}
    id="assignmentGradeMax"
    label="Max Grade"
    onChange={[MockFunction]}
    value={300}
  />
  <div
    className="grade-filter-action"
  >
    <Button
      disabled={false}
      name="assignmentGradeMinMax"
      type="submit"
      variant="outline-secondary"
    >
      Apply
    </Button>
  </div>
</div>
`;
